tests/baselines/reference/unusedLocalsinConstructor2.errors.txt
tests/cases/compiler/unusedLocalsinConstructor2.ts(4,13): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedLocalsinConstructor2.ts (1 errors) ====
    
    class greeter {
        constructor() {
            var unused = 20;
                ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
            var used = "dummy";
            used = used + "second part";
        }
    }